[MOSIP-17758] added draft vid changes and auth role changes
Signed-off-by: ase-101 <sunkadaeanusha@gmail.com>